add_executable(ptx-client main.cc)

if(NOT GLFW3_FOUND)
    find_package(GLFW3)
    endif()
if(GLFW3_FOUND)
    include_directories(${GLFW3_INCLUDE_DIRS})
    add_library(client client.cc)
    target_link_libraries(client ptx-gui-backend pthread)
  target_link_libraries(ptx-client ${GLFW3_LIBRARIES} project_warnings client nanogui ${NANOGUI_EXTRA_LIBS})
endif()
