add_executable(ptx-client main.cc)
add_dependencies(ptx-client ptx-gui-backend nanogui)

if(NOT GLFW3_FOUND)
  find_package(GLFW3)
  endif()
if(GLFW3_FOUND)
  include_directories(${GLFW3_INCLUDE_DIRS})
  add_library(client STATIC client.cc)
  target_link_libraries(client PUBLIC ptx-gui-backend pthread)
  target_link_libraries(ptx-client ${GLFW3_LIBRARIES} project_warnings client nanogui ${NANOGUI_EXTRA_LIBS})
endif()
