add_executable(ptx-client main.cc)
add_dependencies(ptx-client ptx-gui-backend nanogui)

if(NOT GLFW3_FOUND)
  find_package(GLFW3)
  endif()
if(GLFW3_FOUND)
  include_directories(${GLFW3_INCLUDE_DIRS})
  add_library(client STATIC client.cc)
  add_library(client-storage STATIC client_storage.cc)
  target_link_libraries(client-storage mongocxx)
  target_link_libraries(client-storage bsoncxx)
  target_link_libraries(client PUBLIC ptx-gui-backend pthread client-storage)
  target_link_libraries(ptx-client ${GLFW3_LIBRARIES} project_warnings client nanogui ${NANOGUI_EXTRA_LIBS})
endif()
