add_executable(ptx-server main.cc)

if(NOT GLFW3_FOUND)
  find_package(GLFW3)
  endif()
if(GLFW3_FOUND)
  include_directories(${GLFW3_INCLUDE_DIRS})
  add_library(server server.cc)
  target_link_libraries(server ptx-gui-backend client-storage pthread)
  target_link_libraries(ptx-server ${GLFW3_LIBRARIES} project_warnings server nanogui ${NANOGUI_EXTRA_LIBS})
endif()
