add_executable(ptx-server main.cc)
add_dependencies(ptx-server nanogui ptx-gui-backend)

if(NOT GLFW3_FOUND)
  find_package(GLFW3)
  endif()
if(GLFW3_FOUND)
  include_directories(${GLFW3_INCLUDE_DIRS})
  add_library(server STATIC server.cc)
  add_library(connections STATIC connections.cc)
  add_library(server-storage STATIC server_storage.cc)
  target_link_libraries(server-storage mongocxx)
  target_link_libraries(server-storage bsoncxx)
  target_link_libraries(server PUBLIC ptx-gui-backend pthread connections server-storage)
  target_link_libraries(ptx-server PRIVATE ${GLFW3_LIBRARIES} project_warnings server nanogui ${NANOGUI_EXTRA_LIBS} spdlog::spdlog)
endif()
